<resources>
    <string name="app_name">Simple Dictionary</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="translate">Translate</string>
    <string name="my_word">My Word</string>
    <string name="about">About</string>
    <string name="indonesian">Indonesian</string>
    <string name="english">English</string>
    <string name="search_word">Search word..</string>
    <string name="switch_button">Switch Button</string>
    <string name="favorite">Favorite</string>
    <string name="idneng">IDN-ENG</string>
    <string name="engidn">ENG-IDN</string>

    <string name="success_delete">Deleted successfully</string>
    <string name="fail_delete">Failed to delete</string>
    <string name="success_add">Saved successfully</string>
    <string name="fail_add">Failed to save</string>
    <string name="add_new_word">Add New Word</string>
    <string name="word">Word</string>
    <string name="translation">Translation</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="update_word">Update Word</string>
    <string name="developer">by @adwitya.dev</string>
    <string name="version">version 1.0</string>
    <string name="no_data">No data</string>
    <string name="speech_button">Speech Button</string>
    <string name="scan_button">Scan Button</string>
</resources>
