<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.word.AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/bg_bottom_sheet"
        android:orientation="vertical"
        android:padding="32dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/add_new_word"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:id="@+id/switchMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/mode1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:checked="true"
                android:text="@string/idneng" />

            <RadioButton
                android:id="@+id/mode2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:text="@string/engidn" />
        </RadioGroup>

        <EditText
            android:id="@+id/etWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/word"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/etTranslation"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/translation"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:text="@string/save"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>