<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_action_bar"
        app:layout_constraintBottom_toTopOf="@id/rvResult"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_search"
        android:hint="@string/search_word"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="65dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnSwitch" />

    <ImageButton
        android:id="@+id/btnSpeech"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/bg_search"
        android:contentDescription="@string/speech_button"
        android:foreground="?android:selectableItemBackground"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:src="@drawable/ic_volume_up_white_24dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/etWord"
        app:layout_constraintRight_toRightOf="@id/etWord"
        app:layout_constraintTop_toTopOf="@id/etWord"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tvFrom"
        style="@style/LanguageText"
        android:foreground="?android:selectableItemBackground"
        android:text="@string/indonesian"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@id/btnSwitch"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <ImageButton
        android:id="@+id/btnSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/switch_button"
        android:foreground="?android:selectableItemBackground"
        android:padding="16dp"
        android:src="@drawable/ic_compare_arrows_white_24dp"
        app:layout_constraintLeft_toRightOf="@id/tvFrom"
        app:layout_constraintRight_toLeftOf="@id/tvTo"
        app:layout_constraintTop_toTopOf="@id/tvFrom"
        app:layout_constraintBottom_toBottomOf="@id/tvFrom"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tvTo"
        style="@style/LanguageText"
        android:textSize="18sp"
        android:foreground="?android:selectableItemBackground"
        android:text="@string/english"
        app:layout_constraintLeft_toRightOf="@id/btnSwitch"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvFrom"
        tools:ignore="UnusedAttribute" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/etWord"
        tools:listitem="@layout/item_result" />
</androidx.constraintlayout.widget.ConstraintLayout>